--- a/core/scss/foundation/_grid.scss
+++ b/core/scss/foundation/_grid.scss
@@ -158,5 +158,5 @@
 .tds-button-row {
   @include clearfix();
 
-  padding-top: 20px;
+  padding-top: 32px;
 }
